cmake_minimum_required(VERSION 3.10)
project(TaskScheduler)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
add_executable(task_schedular
    Source/main.cpp
    Source/thread_pool.cpp
    Source/task_scheduler.cpp
)